cookbook/ch2/kubernetes_code/my-first-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-first-pod-3
spec:
  containers:
    - name: my-nginx
      image: nginx
    - name: my-centos
      image: centos
      command:
        [
          "/bin/sh",
          "-c",
          "while : ;do curl http://localhost:80/; sleep 10; done",
        ]
